Changelog 0.2.31 [20221102]:
- Added Shortcut Settings Category
- Added Completed This Year
- Added Completed This Season
- Added Two New Icons 
- Fixed typo for the Voted Menu Items

Changelog 0.2.30 [20221031]:
- Enable touch actions for Source Select, Intro Skip, and Play Next

Changelog 0.2.29 [20221031]:
- Added Debrid-Link support

Changelog 0.2.28 [20221023]:
- Get embeds from Animix

Changelog 0.2.27 [20221020]:
- Fix trakt rescrape issue

Changelog 0.2.26 [20221020]:
- Add option to enable/disable embeds
- Improved Nyaa a little
- Added Animix scraper

Changelog 0.2.25 [20221018]:
- Improved Episode meta

Changelog 0.2.24 [20221017]:
- Improved trakt search

Changelog 0.2.23 [20221016]:
- Fix dependency issues

Changelog 0.2.22 [20221016]:
- Fix MAL errors related to missing meta for shows

Changelog 0.2.21 [20221015]:
- Improved gogo

Changelog 0.2.20 [20221015]:
- Fix title not showing in next playing window 

Changelog 0.2.19 [20221014]:
- Fix Stein's Gate 0 Issue

Changelog 0.2.18 [20221013]:
- Fix for empty Kitsu lists
- Quickfix for Strings

Changelog 0.2.17 [20221012]:
- Kodi Leia compatibilty fix

Changelog 0.2.16 [20221011]:
- Added Movies and TV Shows Category so that its easier
- Added Trending This Year
- Added Popular This Year
- Added Voted This Year
- Added Upcoming Next Year
- Added Options to disable Menu Items
- Added two new icons: Movies.png and TV Shows.png
- Fix ratings display bug in source select
- Use clearart if available in get sources window

Changelog 0.2.15 [20221008]:
- Fix encoding errors on Kodi Leia

Changelog 0.2.14 [20221008]:
- Fix 'Enable Tertiary Dub Sort Preference' 
- Fix Movie meta in sourceselect screen

Changelog 0.2.13 [20221007]:
- Fix movie source select issue

Changelog 0.2.12 [20221007]:
- Spy x family nyaa fix

Changelog 0.2.11 [20221006]:
- Fix error when no show_meta available

Changelog 0.2.10 [20221006]:
- Fix error when no thumbs available
- Fix preferred audio selection