@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.otaku.themepak" version="0.0.5" name="Otaku Themepak" provider-name="TeamOtaku">
+<addon id="script.otaku.themepak" version="0.0.6" name="Otaku Themepak" provider-name="TeamOtaku">
     <requires>
         <import addon="kodi.resource" version="1.0.0"/>
     </requires>
